force-app/main/default/objects/FPSA_Invoice_Header__c/FPSA_Invoice_Header__c.object-meta.xml
<CustomObject>
    <label>Invoice Header</label>
    <nameField>
        <displayFormat>IN-{000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>