force-app/main/default/objects/FPSA_Invoice_Header__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Headers</relationshipLabel>
    <relationshipName>Invoice_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>