force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Approved__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>