force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Approver__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoice_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>