force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billing_City__c</fullName>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>