force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Headers</relationshipLabel>
    <relationshipName>Invoice_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>