force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billing_Postal_Code__c</fullName>
    <label>Billing Postal Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>