force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billing_State__c</fullName>
    <label>Billing State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>