force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billing_Street__c</fullName>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>