force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>