force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Invoice_External_Id__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Invoice_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Invoice External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>