force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Lines__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Lines__c</fullName>
    <label>Total Invoice Lines</label>
    <summaryForeignKey>FPSA_Invoice_Line__c.FPSA_Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>