force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Max_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Max_Bill_Rate__c</fullName>
    <inlineHelpText>Maximum Bill rate</inlineHelpText>
    <label>Max Bill Rate</label>
    <summarizedField>FPSA_Invoice_Line__c.FPSA_Project_Resource_Billing_Rate__c</summarizedField>
    <summaryForeignKey>FPSA_Invoice_Line__c.FPSA_Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>