force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Payment_Received_Date__c</fullName>
    <label>Payment Received Date</label>
    <type>Date</type>
</CustomField>