force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Past Due</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>