force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Stage__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Payment Overdue</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>