force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Total_hours_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Total_hours_Invoiced__c</fullName>
    <description>Total hours from Invoice Lines</description>
    <inlineHelpText>Total hours from Invoice Lines</inlineHelpText>
    <label>Total hours Invoiced</label>
    <summarizedField>FPSA_Invoice_Line__c.FPSA_Hours__c</summarizedField>
    <summaryForeignKey>FPSA_Invoice_Line__c.FPSA_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>