force-app/main/default/objects/FPSA_Invoice_Header__c/fields/FPSA_Total_Lines_amount__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Total_Lines_amount__c</fullName>
    <label>Total Invoice Amount</label>
    <summarizedField>FPSA_Invoice_Line__c.FPSA_Amount__c</summarizedField>
    <summaryForeignKey>FPSA_Invoice_Line__c.FPSA_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>