force-app/main/default/objects/FPSA_Invoice_Header__c/fields/Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Due__c</fullName>
    <formula>FPSA_Total_Lines_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>