force-app/main/default/objects/FPSA_Invoice_Header__c/fields/Total_Lines_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Lines_Discount_Amount__c</fullName>
    <label>Total Lines Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>