force-app/main/default/objects/FPSA_Invoice_Header__c/listViews/Open_Invoices.listView-meta.xml
<ListView>
    <fullName>Open_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>FPSA_Invoice_Date__c</columns>
    <columns>FPSA_Payment_Due_Date__c</columns>
    <columns>FPSA_Payment_Received_Date__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>FPSA_Payment_Status__c</columns>
    <columns>FPSA_Stage__c</columns>
    <columns>FPSA_Total_Lines_amount__c</columns>
    <columns>FPSA_Lines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FPSA_Invoiced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Carilion</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <label>Open Invoices</label>
</ListView>