force-app/main/default/objects/FPSA_Invoice_Header__c/listViews/Paid_Invoices.listView-meta.xml
<ListView>
    <fullName>Paid_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>FPSA_Invoice_Date__c</columns>
    <columns>FPSA_Payment_Due_Date__c</columns>
    <columns>FPSA_Payment_Received_Date__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>FPSA_Payment_Status__c</columns>
    <columns>FPSA_Stage__c</columns>
    <columns>FPSA_Total_Lines_amount__c</columns>
    <columns>FPSA_Lines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FPSA_Payment_Status__c</field>
        <operation>equals</operation>
        <value>Past Due,Paid</value>
    </filters>
    <filters>
        <field>FPSA_Invoice_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/31/2020</value>
    </filters>
    <label>Paid Invoices</label>
</ListView>