force-app/main/default/objects/FPSA_Invoice_Header__c/listViews/Unpaid_Invoices.listView-meta.xml
<ListView>
    <fullName>Unpaid_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>FPSA_Invoice_Date__c</columns>
    <columns>FPSA_Payment_Due_Date__c</columns>
    <columns>FPSA_Payment_Received_Date__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>FPSA_Payment_Status__c</columns>
    <columns>FPSA_Stage__c</columns>
    <columns>FPSA_Total_Lines_amount__c</columns>
    <columns>FPSA_Lines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FPSA_Payment_Status__c</field>
        <operation>equals</operation>
        <value>Received,Past Due,Unpaid</value>
    </filters>
    <label>Unpaid Invoices</label>
</ListView>